# rpg-game

./: .gitignore  CODE_REVIEW_STEP3.md  README.md  agents.md  pyproject.toml  ruff.toml  test_party.py  test_portals.py  test_save_load.py
config/: default_config.toml
data/: actors.json  chests.json  dialogue.json  enemies.json  enemy_groups.json  events.json  items.json  loot_tables.json  npc_meta.json  npc_schedules.json  quests.json  shops.json  skills.json  zones.json
docs/: BRANCH_STATUS_ANALYSIS.md  CODEBASE_STATUS.md  CURRENT_STATUS_AND_ROADMAP.md  portal_spawn_facing.md
docs/architecture/: 1.1 Game Overview - Vision One-Pager – Tri-Śarīra RPG.md  1.2 Tri-Śarīra RPG – Core Baseline.md  1.3 Feature Roadmap & Milestones – Tri-Śarīra RPG.md  2.1 World & Regions Overview – Tri-Śarīra RPG.md  2.2 Kalender & Festivals Spec – Tri-Śarīra RPG.md  2.3 NPC Cast & Fasen – Tri-Śarīra RPG.md  2.4 Quest Taxonomy & Voorbeeldlijst – Tri-Śarīra RPG.md  3.1 Combat & Stats Spec – Tri-Śarīra RPG.md  (+16 more)
maps/: z_r1_chandrapur_town.tmx  z_r1_forest_route.tmx  z_r1_shrine_clearing.tmx  z_r1_shrine_inner.tmx
schema/: actors.schema.json  dialogue.schema.json  enemies.schema.json  items.schema.json  npc_schedules.schema.json  quests.schema.json  shops.schema.json  skills.schema.json  zones.schema.json
tests/: test_combat_system.py  test_data_validation.py  test_dialogue_system.py  test_equipment_system.py  test_event_battle_flow.py  test_party.py  test_portals.py  test_quest_system.py  test_save_roundtrip.py  test_scene_manager.py  test_shop_system.py  test_shrine_dungeon.py  test_world_triggers.py
tools/: validate_data.py
(+63 files in other folders)
